--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "@angular/cli": "^1.6.8",
     "@angular/compiler-cli": "^5.2.4",
     "@angular/language-service": "^4.4.6",
+    "@types/faker": "^4.1.2",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.2.0",
+    "faker": "^4.1.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
